--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
 <!-- Write your code here! -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-compatible" content="ie=edge" />
+        <title>INTRODUCTION TO THE DOM LAB</title>
+    </head>
+<body>
+    <h1>MY HTML ADVENTURE</h1>
+    <P>
+        We are writing this HTML to display in <strong>browser</strong>.Basically
+        telling the computer what to do. <em>Neat !</em>
+        we are writing <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">HTML</a> markup to
+        display in our <strong>browser</strong>
+        
+    </P>
+    <table>
+        <thead>
+            <tr>
+                <th>Element name</th>
+                <th>Display value</th>
+            </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>h1</td>
+                    <td>block</td>
+                </tr>
+                <tr>
+                    <td>p</td>
+                    <td>block</td>
+                </tr>
+                <tr>
+                    <td>strong</td>
+                    <td>inline</td>
+                </tr>
+                <tr>
+                     <td>em</td>
+                     <td>inline</td>
+                </tr>
+            </tbody>
+    </table>
+</body>
+</html>
